package inveox.srm.domain.model.enums;

public enum DigitalLabOrderStatus {

    IN_DELIVERY,LOADED_IN_PROCESS,REJECTED,ACCEPTED;

}